# hdpr_stereo_calibration

./: CMakeLists.txt  README.md  package.xml
config/: left.yaml  pancam_left.yaml  pancam_right.yaml  right.yaml
launch/: bumblebee_firewire.launch  stereo_calibrate_bb2_ExoTeR.launch  stereo_calibrate_bb2_HDPR.launch  stereo_calibrate_bb3.launch  stereo_calibrate_kalibr.launch  stereo_calibrate_pancam.launch
src/: calibTransforms.py  calibrationConverter.py  calibrationConverterKalibr.py  calibrationConverterKalibrNoBB2.py  kalibrTransformations.py  rot_ros2rock.py  transformations.py
src/sampleFiles/: camchain-bb2_bb3_pancam.yaml  camchain-kalibr.yaml  results-cam-bb2_bb3_pancam.txt  results-cam-kalibr.txt
